# TermBase

./: .gitignore  PROJECT_BASICS.txt  README.md  SOFTWARE_DESIGN_SPEC.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json  postCreate.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task_request.md
.github/workflows/: ci.yml
assets/character_refs/main_character/: README.txt
assets/character_refs/student/: README.txt
assets/character_refs/teacher/: README.txt
config/: comfyui_workflow.sample.json  project.http-https.gemini-pro-image.json  project.json  project.sample.json  project.schema.json
src/termbase/: __main__.py  cli.py  config.py  errors.py  models.py  testsupport.py
src/termbase.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/termbase/adapters/: comfyui_client.py  gemini_image.py  gemini_llm.py  google_cloud_tts.py  imagen_client.py  openai_llm.py
src/termbase/services/: audio_generation_engine.py  character_reference_manager.py  (+5 more)
testdata/inputs/: api_beginner.json  cache_beginner.json  dns_beginner.json
testdata/mock_openai/: storyboard_dns_stable.json
tests/: test_audio_generation_engine.py  test_character_reference_manager.py  test_comfyui_client.py  test_config.py  test_gemini_image.py  test_image_generation_engine.py  test_models.py  test_openai_llm.py  test_output_writer.py  test_overlay_compositor.py  test_prompt_builder.py  test_scenario_engine.py
tests/fixtures/: legacy_catchphrase_config.json
(+1 files in other folders)
