[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termbase"
version = "0.1.0"
description = "Short-form IT terminology script generator"
requires-python = ">=3.12"
dependencies = [
  "google-genai>=1.38.0",
  "google-cloud-texttospeech>=2.27.0",
  "httpx>=0.27.0",
  "jsonschema>=4.23.0",
  "Pillow>=11.2.1",
  "pydantic>=2.8.0",
  "typer>=0.12.3"
]

[project.scripts]
termbase = "termbase.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
